fix a unittest
fix `testEntityTypes`