@@ -40,6 +40,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -252,7 +253,7 @@ public class ClientQuotaControlManagerTest {
                                           Consumer<ClientQuotaAlteration> acceptor) {
         Collection<ClientQuotaAlteration.Op> ops = quota.entrySet().stream()
                 .map(quotaEntry -> new ClientQuotaAlteration.Op(quotaEntry.getKey(), quotaEntry.getValue()))
-                .toList();
+                .collect(Collectors.toList());
         acceptor.accept(new ClientQuotaAlteration(entity, ops));
     }
 
